--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
 var mediaObject;
 var mediaID = purl(document.location.href).param('m');
 
-$.get('http://data.hyperaud.io/media/' + mediaID, function(m) {
+$.get('http://api.hyperaud.io/media/' + mediaID, function(m) {
   mediaObject = m;
   console.log(m);
-  var media = "http://data.hyperaud.io/" + m.owner + "/" + m.meta.filename;
+  var media = "http://api.hyperaud.io/" + m.owner + "/" + m.meta.filename;
   $("#myVideo").append('<source src="' + media + '" type="video/mp4" />');
   $("#myVideo").append('<source src="' + media.replace('mp4', 'webm') + '" type="video/mp4" />');
 });
 
 var user;
 function whoami(callback) {
-  $.ajax('http://data.hyperaud.io/whoami', {
+  $.ajax('http://api.hyperaud.io/whoami', {
     type: "GET",
    contentType: "application/json; charset=utf-8",
    success: function(whoami) {
@@ -159,7 +159,7 @@ $('#save-button').click(function() {
     if (user && user.username) {
       //
       if (transcriptObject) {
-          $.ajax( 'http://data.hyperaud.io/' + user.username + '/transcripts/' + transcriptObject._id, {
+          $.ajax( 'http://api.hyperaud.io/' + user.username + '/transcripts/' + transcriptObject._id, {
             type: "PUT",
             data: {
               _id: transcriptObject._id,
@@ -184,7 +184,7 @@ $('#save-button').click(function() {
             crossDomain: true
           });
       } else {
-        $.ajax( 'http://data.hyperaud.io/' + user.username + '/transcripts', {
+        $.ajax( 'http://api.hyperaud.io/' + user.username + '/transcripts', {
           type: "POST",
           data: {
             label:  'Transcript for ' + mediaObject.label,
