added pass thru of mediaid on url

--- a/index.html
+++ b/index.html
@@ -1,220 +1,5 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
-	<title>Transcript demo</title>
-	<link rel="stylesheet" type="text/css" href="css/hyperaudio.transcript.css" />
-	<link rel="stylesheet" type="text/css" href="css/hyperaudio.player.css" />
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-	<style>
-	#content {
-		font-size: 1.3em;
-		height: 16em;
-	}
-
-	#header {
-		background: #0090D2;
-	}
-
-	#save-button {
-		background: #0060B2;
-	}
-	</style>
-	<script>
-	window.onload = function () {
-		var timePoint = 0;
-		var chunkTime = 4;
-		var inactivityTime = 2;
-		var lastActivity = Date.now();
-
-		var v = document.getElementById("myVideo");
-		var p = document.getElementById("pbr");
-		var cp = document.getElementById("currentPbr");
-		var c = document.getElementById("cht");
-		var cc = document.getElementById("currentCht");
-		var content = document.getElementById("content");
-		var i = document.getElementById("inactivity");
-		var ic = document.getElementById("currentInactivity");
-		//v.playbackRate = 0.5;
-		v.addEventListener('timeupdate',function(){
-			//console.log(v.currentTime);
-			var secs = Math.floor(v.currentTime);
-			if (secs%chunkTime == 0 && timePoint != secs) {
-				v.pause();
-				timePoint = secs;
-				//setTimeout(function(){v.play()},chunkTime*1000);
-			}
-		},false);
-
-		setInterval(function() {
-			console.log(Date.now() - lastActivity);
-			if (Date.now() - lastActivity > (1000*inactivityTime)) {
-				v.play();
-			}
-		}, 1000);
-
-		p.addEventListener('input',function(){
-			cp.innerHTML = p.value;
-			v.playbackRate = p.value;
-		},false);
-
-		c.addEventListener('input',function(){
-			cc.innerHTML = c.value;
-			chunkTime = c.value;
-		},false);
-
-		i.addEventListener('input',function(){
-			ic.innerHTML = i.value;
-			inactivityTime = i.value;
-		},false);
-
-		content.addEventListener('input',function(){
-			lastActivity = Date.now();
-			//console.log(thisActivity);
-		},false);
-
-	};
-	</script>
-</head>
 <body>
-<div id="wrapper">
-	<header id="header">
-		<h1>Hyperaudio Maker</h1>
-
-		<div id="save-button">6</div>
-	</header>
-<div style="width:640px; height:360; margin: 0 auto; margin-bottom:64px; margin-top:64px">
-<video id="myVideo" controls>
-  <!-- <source src="http://hyperaud.io/video/obama-responds.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' /> -->
-  <!-- <source src="http://hyperaud.io/video/obama-responds.webm" type='video/webm; codecs="vp8, vorbis"' /> -->
-</video>
-<form>
-<p></p>
-<input id="pbr" type="range" value="1" min="0.5" max="4" step="0.1" style="width:100%">
-<p>Playback Rate <span id="currentPbr">1</span></p>
-<input id="cht" type="range" value="4" min="0" max="10" step="1" style="width:100%">
-<p>Chunk Length (seconds) <span id="currentCht">4</span></p>
-<input id="inactivity" type="range" value="2" min="1" max="10" step="1" style="width:100%">
-<p>Inactivity Cue (seconds) <span id="currentInactivity">2</span></p>
-</form>
-</div>
-
-
-<div id="content" contenteditable="true"></div>
-
-</div>
-
-<button id='save'>SAVE</button>
-
-<style scoped>
-  [contenteditable="true"] { padding: 10px; outline: 2px dashed #CCC; }
-  [contenteditable="true"]:hover { outline: 2px dashed #0090D2; }
-</style>
-
-
-<script src="http://code.jquery.com/jquery-2.0.3.js"></script>
-<!-- <script type="text/javascript" src="js/utility.xhr.js"></script> -->
-<script type="text/javascript" src="lib/purl.js"></script>
-
-<script>
-var mediaObject;
-var mediaID = purl(document.location.href).param('m');
-
-$.get('http://api.hyperaud.io/media/' + mediaID, function(m) {
-  mediaObject = m;
-  console.log(m);
-  var media = "http://api.hyperaud.io/" + m.owner + "/" + m.meta.filename;
-  $("#myVideo").append('<source src="' + media + '" type="video/mp4" />');
-  $("#myVideo").append('<source src="' + media.replace('mp4', 'webm') + '" type="video/mp4" />');
-});
-
-var user;
-function whoami(callback) {
-  $.ajax('http://api.hyperaud.io/whoami', {
-    type: "GET",
-   contentType: "application/json; charset=utf-8",
-   success: function(whoami) {
-      if (whoami.user) {
-        // logged in
-        // alert('logged in');
-        user = whoami.user;
-      } else {
-        // not logged in
-        // alert('NOT logged in');
-        user = null;
-      }
-      if (callback) callback();
-    },
-    xhrFields: {
-      withCredentials: true
-    },
-      crossDomain: true 
-  });
-}
-
-var transcriptObject = null;
-$('#save-button').click(function() {
-  whoami(function() {
-    if (user && user.username) {
-      //
-      if (transcriptObject) {
-          $.ajax( 'http://api.hyperaud.io/' + user.username + '/transcripts/' + transcriptObject._id, {
-            type: "PUT",
-            data: {
-              _id: transcriptObject._id,
-              label:  'Transcript for ' + mediaObject.label,
-              type: 'text',
-              sort: 0,
-              owner: user.username,
-              content: $('#content').text(),
-              media: mediaID
-            },
-            success: function(data) {
-              transcriptObject = data;
-              console.log(data);
-              alert('Saved!');
-            },
-            error: function() {
-              alert('Save Error');
-            },
-            xhrFields: {
-              withCredentials: true
-            },
-            crossDomain: true
-          });
-      } else {
-        $.ajax( 'http://api.hyperaud.io/' + user.username + '/transcripts', {
-          type: "POST",
-          data: {
-            label:  'Transcript for ' + mediaObject.label,
-            type: 'text',
-            sort: 0,
-            owner: user.username,
-            content: $('#content').text(),
-            media: mediaID
-          },
-          success: function(data) {
-            transcriptObject = data;
-            console.log(data);
-            alert('Created!');
-          },
-          error: function() {
-            alert('Save Error');
-          },
-          xhrFields: {
-            withCredentials: true
-          },
-          crossDomain: true
-        });
-      }
-      //
-    } else {
-      alert('not logged in');
-    }
-  });
-});
-</script>
-
+<a href="maker.html?m=52a1dfafe4b0379c692e4665">maker.html?m=52a1dfafe4b0379c692e4665</a>
 </body>
 </html>
