--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <body>
-<a href="maker.html?m=52a1dfafe4b0379c692e4665">maker.html?m=52a1dfafe4b0379c692e4665</a>
+<p>
+<a href="maker.html?m=52a1dfafe4b0379c692e4665">maker.html?m=52a1dfafe4b0379c692e4665 (static)</a>
+</p>
+<p>
+<a href="maker.html?m=52a6f1def223342d64000004">maker.html?m=52a6f1def223342d64000004 (YouTube)</a>
+</p>
 </body>
 </html>
