removing old ha libs and addng latest hyperaudio.js

--- a/maker.html
+++ b/maker.html
@@ -114,8 +114,8 @@
 
 
 <script src="http://code.jquery.com/jquery-2.0.3.js"></script>
-<!-- <script type="text/javascript" src="js/utility.xhr.js"></script> -->
 <script type="text/javascript" src="lib/purl.js"></script>
+<script type="text/javascript" src="js/hyperaudio.js"></script>
 
 <script>
 var mediaObject;
