--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+	<h1>Hyperaudio Maker - Tester</h1>
 <p>
 <a href="maker.html?m=52a1dfafe4b0379c692e4665">maker.html?m=52a1dfafe4b0379c692e4665 (static)</a>
 </p>
